examples/prometeus-grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  #   cert-manager.io/cluster-issuer: "letsencrypt-staging"
  namespace: prometheus
spec:
  tls:
  - hosts:
    - grafana.oke-free.org
    secretName: grafana-tls
  ingressClassName: nginx
  rules:
  - host: grafana.oke-free.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
