examples/prometeus-grafana/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  #   cert-manager.io/cluster-issuer: "letsencrypt-staging"
  namespace: prometheus
spec:
  tls:
  - hosts:
    - prometheus.oke-free.org
    secretName: prometheus-tls
  ingressClassName: nginx
  rules:
  - host: prometheus.oke-free.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
